refactoring VectorStore Playground UI
Signed-off-by: Jemin Huh <hjm1980@gmail.com>